--- a/app/assets/stylesheets/trend.css.scss
+++ b/app/assets/stylesheets/trend.css.scss
@@ -1,13 +1,27 @@
+@import 'variables';
+.trend {
+
+}
+
 .project-td {
   img {
     border-radius: 10rem;
   }
 
   .title a {
-    color: #333;
+    color: #444;
     font-weight: 600;
     &:hover {
       text-decoration: underline;
+    }
+  }
+
+  @media #{$small-only} {
+    .title {
+      margin-left: -1rem;
+      a {
+        font-weight: normal;
+      }
     }
   }
 
