--- a/app/views/explore/_project_td.html.slim
+++ b/app/views/explore/_project_td.html.slim
@@ -5,5 +5,5 @@
   .small-8.medium-10.columns
     h6.title
       = link_to project.name, project
-    .sub-title
+    .sub-title.show-for-medium-up
       | #{project.oneword}
