--- a/app/assets/stylesheets/explore_all.css.scss
+++ b/app/assets/stylesheets/explore_all.css.scss
@@ -1,10 +1,40 @@
+@import 'variables';
 .explore-all {
-  padding-top: 1.5rem;
-  background-color: white;
+  background-color: $my-body-bg;
 
   .no-content {
     margin-top: 1rem;
     color: #666;
+  }
+
+  #search {
+    margin-left: 1rem;
+  }
+
+  #search-wrapper {
+    margin-top: 1rem;
+  }
+
+  .search-form {
+    background-color: white;
+    padding: 3rem 1rem 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .industry, .city {
+    .tag {
+      display: inline-block;
+      vertical-align: top;
+      margin-left: 1rem;
+      padding: 0.25rem 1rem 1rem 0;
+      color: #999;
+      font-size: 95%;
+    }
+
+    .sub-nav {
+      display: inline-block;
+      width: 90%;
+    }
   }
 
   .projects {
