--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -577,7 +577,7 @@ $secondary-color: #00C4A4;
 // $glowing-effect-color: $input-focus-border-color;
 
 // Select variables
-// $select-bg-color: #fafafa;
+$select-bg-color: #fff;
 // $select-hover-bg-color: scale-color($select-bg-color, $lightness: -3%);
 
 // Inline Lists
