投资人列表

--- a/app/assets/stylesheets/components/project_list_item.css.scss
+++ b/app/assets/stylesheets/components/project_list_item.css.scss
@@ -1,7 +1,7 @@
 .project-list-item {
-  border-bottom: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  border-left: 1px solid #ddd;
+  border-bottom: 1px solid #eee;
+  border-right: 1px solid #fcfcfc;
+  border-left: 1px solid #fcfcfc;
   padding: 1rem 0;
   background-color: white;
   img {
