--- a/app/views/home/search.html.slim
+++ b/app/views/home/search.html.slim
@@ -1,6 +1,6 @@
 - content_for(:title) do
   | #{@q} - 搜索
-.search.top-blank
+.search-page.top-blank
   .row
     .small-12.medium-10.medium-centered.columns
       p 
