--- a/app/assets/stylesheets/explore_all.css.scss
+++ b/app/assets/stylesheets/explore_all.css.scss
@@ -8,6 +8,7 @@
   }
 
   #search {
+    border-radius: 0;
     @media #{$medium-up} {
       margin-left: 1rem;
     }
@@ -23,36 +24,37 @@
     background-color: white;
     padding: 3rem 1rem 2rem;
     margin-bottom: 2rem;
-  }
 
-  .industry, .city {
-    @media #{$small-only} {
+    .industry, .city {
+      @media #{$small-only} {
+        display: none;
+      }
+      .tag {
+        display: inline-block;
+        vertical-align: top;
+        margin-left: 1rem;
+        padding: 0.25rem 1rem 1rem 0;
+        color: #999;
+        font-size: 95%;
+      }
+
+      .sub-nav {
+        display: inline-block;
+        width: 90%;
+      }
+    }
+
+    .industry-for-small, .city-for-small {
       display: none;
-    }
-    .tag {
-      display: inline-block;
-      vertical-align: top;
-      margin-left: 1rem;
-      padding: 0.25rem 1rem 1rem 0;
-      color: #999;
-      font-size: 95%;
-    }
-
-    .sub-nav {
-      display: inline-block;
-      width: 90%;
+      @media #{$small-only} {
+        display: block;
+      }
     }
   }
 
-  .industry-for-small, .city-for-small {
-    display: none;
-    @media #{$small-only} {
-      display: block;
-    }
-  }
 
   .projects {
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #fcfcfc;
 
     .paginate {
       margin-top: 2rem;
