--- a/app/views/investors/index.html.slim
+++ b/app/views/investors/index.html.slim
@@ -9,7 +9,7 @@
         p 关注优秀的投资人, 跟投项目, 学习投资理念
   .row
     .small-12.columns
-      form ng-submit='search()' ng-controller='InvestorSearchController' ng-init='q="#{params[:investor_type]}"'
+      form.search-form ng-submit='search()' ng-controller='InvestorSearchController' ng-init='investor_type="#{params[:investor_type]}"'
         .row
           .small-12.columns
             dl.sub-nav
@@ -19,11 +19,16 @@
               - @investor_types.each do |investor_type|
                 dd class="#{active_for(investor_type.to_s, params[:investor_type].to_s)}" ng-class="{ active: is_selected_investor_type('#{investor_type}') }"
                   a ng-click='select_investor_type("#{investor_type}")' #{t('investor.investor_types.'+ investor_type)}
+            .show-for-small-only
+              select ng-model='investor_type' ng-change='select_investor_type(investor_type)'
+                option value='' 全部类别
+                - @investor_types.each do |investor_type|
+                  option value="#{investor_type}" #{t('investor.investor_types.'+ investor_type)}
         .row.search.collapse
           .small-9.medium-6.large-4.columns
             input type='text' ng-model='q' ng-init='q="#{params[:q]}"' placeholder='输入投资人信息, 如: 张三'
           .small-3.medium-1.large-1.end.columns
-            a.button.postfix ng-click='search()' 投资人搜索
+            a.button.postfix ng-click='search()' 搜索
       - if @investors.blank?
         p.no-content 没有搜索结果
       - else
