--- a/app/assets/stylesheets/investors.css.scss
+++ b/app/assets/stylesheets/investors.css.scss
@@ -31,6 +31,14 @@
     }
   }
 
+  .investors-wrapper {
+    margin-bottom: 2rem;
+  }
+
+  .pagination {
+    margin-top: 2rem;
+  }
+
   .investor {
     background-color: white;
     padding: 1rem;
