--- a/app/views/admin/law_iterms/index.html.slim
+++ b/app/views/admin/law_iterms/index.html.slim
@@ -6,7 +6,7 @@
       thead
         tr
           th 标题
-          th 内容
+          th style='width: 50%' 内容
           th 公开
           th 所属项目
           th 创建时间
