--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -8,7 +8,7 @@
           th 注册时间
           th 上次登录时间
           th 是否是投资人
-          th 拥有项目
+          th style='width: 10%' 拥有项目
           th 操作
       tbody
         - @users.each do |user|
