把 Logo 调为方形

--- a/app/assets/stylesheets/components/project_head.css.scss
+++ b/app/assets/stylesheets/components/project_head.css.scss
@@ -12,9 +12,9 @@
 
       margin: auto;
 
-      img {
-        border-radius: 10rem;
-      }
+      //img {
+        //border-radius: 10rem;
+      //}
     }
 
     .name {
@@ -130,9 +130,9 @@
   }
 }
 
-.logo img {
-  border-radius: 10rem;
-}
+//.logo img {
+  //border-radius: 10rem;
+//}
 
 .share-link {
   margin-bottom: 3rem;
