--- a/app/assets/stylesheets/components/project_list_item.css.scss
+++ b/app/assets/stylesheets/components/project_list_item.css.scss
@@ -4,9 +4,9 @@
   border-left: 1px solid #fcfcfc;
   padding: 1rem 0;
   background-color: white;
-  img {
-    border-radius: 10rem;
-  }
+  //img {
+    //border-radius: 10rem;
+  //}
   .name {
     display: inline;
     margin-right: 1rem;
