--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -63,8 +63,8 @@
     font-size: 1.2rem;
   }
 
-  .project img, .job img {
-    border-radius: 10rem;
+  .investor img{
+    border-radius: 50%;
   }
 
   .head {
