--- a/app/assets/stylesheets/trend.css.scss
+++ b/app/assets/stylesheets/trend.css.scss
@@ -4,9 +4,9 @@
 }
 
 .project-td {
-  img {
-    border-radius: 10rem;
-  }
+  //img {
+    //border-radius: 10rem;
+  //}
 
   .title a {
     color: #444;
