--- a/app/assets/stylesheets/components/project_head.css.scss
+++ b/app/assets/stylesheets/components/project_head.css.scss
@@ -4,13 +4,17 @@
   .head {
 
     .logo {
-      width: 50%;
+      width: 60%;
 
       @media #{$small-only} {
         width: 30%;
       }
 
       margin: auto;
+      padding: 0.3125rem;
+      border: 1px solid #e9e9e9;
+      border-radius: 5px;
+      background: white;
 
       //img {
         //border-radius: 10rem;
