修正编辑项目显示的问题

--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -100,7 +100,7 @@
     .small-12.columns
       .basic-content
         h3.title 产品介绍
-        p
+        p.description ng-hide='description_edited'
           | {{ project.description }}
         .edit
           a ng-click='open_description_edit()' 编辑
