--- a/app/views/home/_event_project_content.html.slim
+++ b/app/views/home/_event_project_content.html.slim
@@ -5,5 +5,4 @@
     .small-9.large-10.columns
       .title-wrapper
         h6.title #{event.project.name}
-        span.sub-title #{event.project.oneword}
-      p.team.description #{event.project.description}
+      p.sub-title #{event.project.oneword}
