service 错误字修改

--- a/app/views/about/service.html.slim
+++ b/app/views/about/service.html.slim
@@ -33,7 +33,7 @@
           li 用户提供的产品有侵害任何第三方知识产权、财产权等合法权益，或可能对第三方造成不利影响或侵害；
           li 用户利用创业赢平台提供之网络平台进行任何犯罪活动，或宣传散播法律法规禁止散播的信息，或一 切损害创业赢平台利益的活动；
           li 用户有违反本协议任何条款的行为，经创业赢平台警告后仍未更正的；
-          li 户的行为干扰创业赢平台的服务。
+          li 用户的行为干扰创业赢平台的服务。
       li 用户同意创业赢平台有权依据本协议及本平台服务规则对用户的不合法、不合规行为采取行动，包括但 不限于中断其帐号、删除地址、目录或关闭服务器等。
       li 创业赢平台对本平台发布的信息真实性、及时性和有效性不做任何形式的担保， 对该等信息的理解和理应应当依赖于用户自身判断。
 
