工作页面调整

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -1,4 +1,6 @@
+@import 'variables';
 .job-show {
+  background-color: $my-body-bg;
 
   .head {
     background-color: #79B0EA;
@@ -6,16 +8,26 @@
     h1 {
       color: white;
     }
+    margin-bottom: 2rem;
   }
 
   .content {
-    margin-top: 2rem;
+    .search {
+      background-color: white;
+      padding: 2rem;
+      border: 1px solid #eee;
+    }
+
+    .jobs-wrapper {
+      background-color: white;
+      margin-bottom: 2rem;
+    }
   }
 
   .job-project {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
     margin: 1rem 0;
-    padding: 1rem 0;
+    padding: 2rem 1rem;
 
     .name {
       display: inline;
@@ -47,6 +59,20 @@
 
       span[class|=fi] {
         margin-right: 0.2rem;
+      }
+
+      .fa {
+        margin-right: 0.3125rem;
+      }
+
+      .city, .category {
+        margin-right: 0.5rem;
+        a {
+          color: #999;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
       }
 
     }
