--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -14,6 +14,7 @@
 // $body-bg: #F3F8F9;
 $body-font-family: "Helvetica Neue", "Helvetica", Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", sans-serif;
 $my-body-bg: #F3F8F9;
+$my-project-border-color: #f4f4f4;
 // $experimental: true;
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
