--- a/app/views/explore/all.html.slim
+++ b/app/views/explore/all.html.slim
@@ -1,7 +1,7 @@
 - content_for(:title) do
   | 所有 - 发现
 
-.explore.explore-all.top-blank
+.explore.explore-all
   .row
     .small-12.columns
       = render partial: 'head', locals: { type: 'all' }
