--- a/app/views/explore/trend.html.slim
+++ b/app/views/explore/trend.html.slim
@@ -1,6 +1,6 @@
 - content_for(:title) do
   | 趋势 - 发现
-.explore.top-blank
+.explore
   .row
     .small-12.columns
       = render partial: 'head', locals: { type: 'trend' }
