--- a/app/views/admin/investors/_investor.html.slim
+++ b/app/views/admin/investors/_investor.html.slim
@@ -6,10 +6,16 @@ tr
     = link_to investor.user.name, investor_path(investor.id)
   td
     = time_ago_in_words( investor.updated_at )
-  td 无
   td
-    ul.button-group
-      li
-        button.small.investor_passed data-uri=accept_admin_investor_path(investor.id) data-confirm="确认通过?" 通过
-      li
-        button.small.investor_rejected.alert data-uri=reject_admin_investor_path(investor.id) data-prompt="输入拒绝原因" 拒绝
+    = human_investor_status( investor ) 
+  td
+    | #{ investor.investor_audit_note  }
+  td
+    - if investor.can_pass?
+      ul.button-group
+        li
+          button.small.investor_passed data-uri=accept_admin_investor_path(investor.id) data-confirm="确认通过?" 通过
+        li
+          button.small.investor_rejected.alert data-uri=reject_admin_investor_path(investor.id) data-prompt="输入拒绝原因" 拒绝
+    - else
+      | 无
