--- a/app/views/common/_project_block_item.html.slim
+++ b/app/views/common/_project_block_item.html.slim
@@ -27,7 +27,7 @@ li
             .item.right.margin-link-wrapper
               = link_to project.members.size, project_path(project)
               | 人
-      - if (leader = project.opened_money_require.leader).present?
+      - if (leader = project.try(:opened_money_require).try(:leader) ).present?
         .tag
           .row
             .small-4.columns
