job footer name change

--- a/app/views/layouts/_foot.html.slim
+++ b/app/views/layouts/_foot.html.slim
@@ -11,7 +11,7 @@
         li
           = link_to "法律法规", law_about_index_path
         li
-          = link_to "人才招聘", job_about_index_path
+          = link_to "加入我们", job_about_index_path
         li
           = link_to "风险提示", venture_about_index_path
   .row
