--- a/app/assets/stylesheets/components/deliver_project.css.scss
+++ b/app/assets/stylesheets/components/deliver_project.css.scss
@@ -11,6 +11,20 @@
     color: red;
     opacity: 1;
   }
+
+  .project-img {
+    padding: 0.3125rem;
+    border: 1px solid #e9e9e9;
+    border-radius: 5px;
+    background: white;
+  }
+
+  .project-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    white-space: nowrap;
+  }
 }
 
 .deliver-project-modal {
