--- a/app/views/investors/_investor.html.slim
+++ b/app/views/investors/_investor.html.slim
@@ -3,44 +3,61 @@
     = link_to user_path(investor.user) do
       - image_tag investor.user.avatar_url
   .small-9.medium-10.columns
-    .name-area
-      h4.name
-        = link_to investor.user.name, user_path(investor.user)
-      .title #{investor.title}
-      .type #{t('investor.investor_types.'+ investor.investor_type)}
-    .content
-      - if investor.description.present?
-        .description
-          | #{investor.description}
-      .industry-area
-        | 投资领域:
-        span.industry
-          | #{investor.investidea.industry}
-    .op ng-controller='DeliverProjectController'
-      button.small ng-click='open_deliver_project_modal(#{investor.user_id})' 投递项目
-      script type='text/ng-template' id='deliver_project_modal.html'
-        .row.deliver-project-modal.ng-cloak
-          a.close-reveal-modal ng-click="cancel()" ×
-          .small-12.columns
-            h3
-              | 投递项目给 
-              span.ng-cloak
-                | {{ delivered_user_info.name }}
-            hr
-            .wrapper ng-hide=' is_delivering_projects_empty() '
-              p 请选择投递项目
-              ul.small-block-grid-3.medium-block-grid-5
-                li ng-repeat=' project in delivering_projects '
-                  .delivering-project ng-class= '{ select: is_selected_project(project) }' ng-click='toggle_project(project)'
-                    img ng-src=' {{ project.logo_url }}'
-                    span.fi-check ng-show=' is_selected_project(project) '
-                    | {{ project.name }}
-            p.no-content ng-show=' is_delivering_projects_empty() '
-              | 你还没有项目, 不能投递, 点击
-              = link_to ' 这里 ', new_project_path
-              | 创建.
-            hr
-            p.ng-cloak.alert
-              | {{ deliver_error }}
-            button ng-click='deliver()' 开始投递
-            a.back ng-click='cancel()' 取消
+    .row
+      .small-12.medium-8.large-9.columns
+        .name-area
+          h3.name
+            = link_to investor.user.name, user_path(investor.user)
+          .type #{t('investor.investor_types.'+ investor.investor_type)}
+          .title #{investor.title}
+          .content
+            - if investor.description.present?
+              .description
+                | #{investor.description}
+            .industry-area
+              span.industry-label 投资领域
+              span.industry-content
+                | #{investor.investidea.industry}
+      .small-12.medium-4.large-3.columns
+        .op ng-controller='DeliverProjectController'
+          .star-button-wrapper.ng-cloak ng-controller='FunsController' ng-init='init(#{investor.user.id}, #{current_user.fun?(investor.user)})'
+            .star-button ng-hide='loading || is_fun' ng-click='add_fun()'
+              i.fa.fa-plus
+              a 关注
+            .star-button ng-show='!loading && is_fun' ng-click='remove_fun()'
+              i.fa.fa-plus
+              a 取消关注
+            .star-button ng-show='loading'
+              i.fa.fa-plus
+              a 加载中
+          .deliver-button ng-click='open_deliver_project_modal(#{investor.user_id})' 
+            i.fa.fa-send
+            a 投递项目
+            script type='text/ng-template' id='deliver_project_modal.html'
+              .row.deliver-project-modal.ng-cloak
+                a.close-reveal-modal ng-click="cancel()" ×
+                .small-12.columns
+                  h3
+                    | 投递项目给 
+                    span.ng-cloak
+                      | {{ delivered_user_info.name }}
+                  hr
+                  .wrapper ng-hide=' is_delivering_projects_empty() '
+                    p 请选择投递项目
+                    ul.small-block-grid-3.medium-block-grid-5
+                      li ng-repeat=' project in delivering_projects '
+                        .delivering-project ng-class= '{ select: is_selected_project(project) }' ng-click='toggle_project(project)'
+                          .project-img
+                            img ng-src=' {{ project.logo_url }}'
+                          .project-title
+                            span.fi-check ng-show=' is_selected_project(project) '
+                            | {{ project.name }}
+                  p.no-content ng-show=' is_delivering_projects_empty() '
+                    | 你还没有项目, 不能投递, 点击
+                    = link_to ' 这里 ', new_project_path
+                    | 创建.
+                  hr
+                  p.ng-cloak.alert
+                    | {{ deliver_error }}
+                  button ng-click='deliver()' 开始投递
+                  a.back ng-click='cancel()' 取消
