--- a/app/views/investors/_investor.html.slim
+++ b/app/views/investors/_investor.html.slim
@@ -18,6 +18,10 @@
               span.industry-label 投资领域
               span.industry-content
                 | #{investor.investidea.industry}
+            .industry-area
+              span.industry-label 所在公司
+              span.industry-content
+                | #{investor.company}
       .small-12.medium-4.large-3.columns
         .op ng-controller='DeliverProjectController'
           - if current_user && current_user != investor.user
