project head name margin

--- a/app/assets/stylesheets/components/project_head.css.scss
+++ b/app/assets/stylesheets/components/project_head.css.scss
@@ -21,6 +21,10 @@
       //}
     }
 
+    .name-area {
+      margin-top: 2rem;
+    }
+
     .name {
       text-align: center;
       white-space: nowrap;
