project show border adjust

--- a/app/assets/stylesheets/components/invest.css.scss
+++ b/app/assets/stylesheets/components/invest.css.scss
@@ -4,7 +4,7 @@
   position: relative;
 
   .title {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
     padding-bottom: 0.5rem;
     margin-bottom: 0.5rem;
   }
@@ -41,11 +41,11 @@
   }
 
   .detail {
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #eee;
 
     .followers {
       padding: 1rem 2.225rem 0;
-      border-top: 1px solid #ddd;
+      border-top: 1px solid #eee;
 
       .type {
         display: inline-block;
@@ -124,7 +124,7 @@
             display: block;
             padding-bottom: 0.625rem;
             margin-bottom: 1rem;
-            border-bottom: 1px dashed #ddd;
+            border-bottom: 1px dashed #eee;
             &:hover {
               .fa {
                 color: $secondary-color;
@@ -169,7 +169,7 @@
     text-align: center;
 
     a {
-      border-top: 1px solid #ddd;
+      border-top: 1px solid #eee;
       padding: 1rem 0;
       color: #999;
       display: block;
@@ -193,7 +193,7 @@
   .invest-button {
     line-height: 3;
     padding: 2rem 0;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #eee;
     text-align: center;
 
     .invest-tips {
@@ -231,7 +231,7 @@
 .syndicate-info {
 
   .title {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
     padding-bottom: 0.5rem;
     margin-bottom: 0.5rem;
   }
