--- a/app/assets/stylesheets/components/project_content.css.scss
+++ b/app/assets/stylesheets/components/project_content.css.scss
@@ -2,7 +2,7 @@
   .content {
 
     .title {
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #eee;
       padding-bottom: 0.5rem;
       margin-bottom: 0.5rem;
     }
