--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -5,9 +5,9 @@
 
   .box {
     background-color: #fff;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #d8d8d8;
+    //border-style: solid;
+    //border-width: 1px;
+    //border-color: #d8d8d8;
     margin-bottom: 1.25rem;
     color: #666;
 
