--- a/app/assets/stylesheets/components/invest.css.scss
+++ b/app/assets/stylesheets/components/invest.css.scss
@@ -12,6 +12,9 @@
   .content .box {
     padding: 1rem 1.5rem;
     margin-bottom: 0;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #f3f3f3;
 
     .sub-title {
       color: $primary-color;
