--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -12,7 +12,8 @@ $rem-base: 14px;
 @import "foundation/components/global";
 
 // $body-bg: #F3F8F9;
-$body-font-family: "Helvetica Neue", "Helvetica", Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", sans-serif;
+// $body-font-family: "Helvetica Neue", "Helvetica", Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", sans-serif;
+$body-font-family: 'hiragino sans gb', 'helvetica neue', 'microsoft yahei', tahoma, arial, sans-serif;
 $my-body-bg: #F3F8F9;
 $my-project-border-color: #f4f4f4;
 // $experimental: true;
