时间线调整

--- a/app/assets/stylesheets/investors.css.scss
+++ b/app/assets/stylesheets/investors.css.scss
@@ -18,6 +18,11 @@
     }
   }
 
+  .no-content {
+    padding-left: 2rem;
+    color: #666;
+  }
+
   .sub-nav {
     @media #{$small-only} {
       display: none;
