--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -10,6 +10,11 @@
     }
     margin-bottom: 2rem;
   }
+  
+  .no-content {
+    padding-left: 2rem;
+    color: #666;
+  }
 
   .content {
     .search {
