--- a/app/assets/stylesheets/components/list.css.scss
+++ b/app/assets/stylesheets/components/list.css.scss
@@ -4,16 +4,25 @@ ul.list {
   padding-bottom: 2rem;
   margin-bottom: 2rem;
   border-bottom: 1px solid #ddd;
+  margin-left: 0;
+  margin-right: 0;
   li {
     margin-bottom: 1rem;
+    border: 1px solid #ddd;
+    padding: 0;
 
     a {
       border: 1px solid #ddd;
-      padding: 2rem 1rem;
+      padding: 1.5rem 0;
       display: inline-block;
       width: 100%;
+      color: #aaa;
+      font-size: 1.2rem;
+      cursor: default;
+    }
+    a.active {
       color: #333;
-      font-size: 1.5rem;
+      font-weight: 600;
     }
   }
 }
