investor search form

--- a/app/assets/stylesheets/investors.scss
+++ b/app/assets/stylesheets/investors.scss
@@ -28,6 +28,7 @@
     }
   }
   .search-form {
+    margin-top: 2rem;
     background-color: white;
     padding: 2rem 2rem 1rem 2rem;
     margin-bottom: 2rem;
