--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -3,6 +3,18 @@
   background-color: $my-body-bg;
   min-height: 30rem;
 
+  .panel {
+    .title {
+      margin-bottom: 1.5rem;
+    }
+
+    .no-content {
+      text-align: left;
+      color: #999;
+      margin-bottom: 0;
+    }
+  }
+
   .no-content {
     text-align: center;
     margin-bottom: 1rem;
